syntax = "proto3";

package blog;

option go_package = "blogpb";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

// CreateBlog

message CreateBlogRequest { Blog blog = 1; }

message CreateBlogResponse { Blog blog = 1; }

// ReadBlog

message ReadBlogRequest { string blog_id = 1; }

message ReadBlogResponse { Blog blog = 1; }

// UpdateBlog

message UpdateBlogRequest { Blog blog = 1; }

message UpdateBlogResponse { Blog blog = 1; }

// DeleteBlog

message DeleteBlogRequest { string blog_id = 1; }

message DeleteBlogResponse { string blog_id = 1; }

// ListBlog

message ListBlogRequest {}

message ListBlogResponse { Blog blog = 1; }

// DownloadImage

message DownloadImageRequest { string fileName = 1; }

message DownloadImageResponse { bytes fileChunk = 1; }

// BlogService

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {}

  rpc ReadBlog(ReadBlogRequest)
      returns (ReadBlogResponse); // return NOT_FOUND if not found

  rpc UpdateBlog(UpdateBlogRequest)
      returns (UpdateBlogResponse); // return NOT_FOUND if not found

  rpc DeleteBlog(DeleteBlogRequest)
      returns (DeleteBlogResponse); // return NOT_FOUND if not found

  rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse);

  rpc DownloadImage(DownloadImageRequest)
      returns (stream DownloadImageResponse);
}
